hphp/hack/test/typecheck/refinements/inter_shapes.php.like_types.exp
File "inter_shapes.php", line 13, characters 13-13:
Invalid "is" expression hint (Typing[4195])
File "inter_shapes.php", line 13, characters 13-13:
The "is" operator cannot be used with a union
File "inter_shapes.php", line 17, characters 13-13:
Invalid "is" expression hint (Typing[4195])
File "inter_shapes.php", line 17, characters 13-13:
The "is" operator cannot be used with a union
File "inter_shapes.php", line 20, characters 13-13:
Invalid "is" expression hint (Typing[4195])
File "inter_shapes.php", line 20, characters 13-13:
The "is" operator cannot be used with a union
File "inter_shapes.php", line 23, characters 13-13:
Invalid "is" expression hint (Typing[4195])
File "inter_shapes.php", line 23, characters 13-13:
The "is" operator cannot be used with a union
